--- a/Index.html
+++ b/Index.html
@@ -3,5 +3,6 @@
   <body>
         <h1>Make me red!</h1>
         <p>I am a paragraph I should be blue, Helvetica, size 16px.</p>
+        <p>Second paragraph</p>
     </body>
 </html>
