New branch paragraph
a paragrah for the Feature branch

--- a/Index.html
+++ b/Index.html
@@ -4,5 +4,6 @@
         <h1>Make me red!</h1>
         <p>I am a paragraph I should be blue, Helvetica, size 16px.</p>
         <p>Second paragraph</p>
+        <p>Paragraph for the branch</p>
     </body>
 </html>
